# advent-of-code-py

./: LICENSE  README.md  get_input_data.sh  main.py  pyproject.toml  utils.py
2023/day01/: main.py
2023/day01/tests/: tests.py
2023/day02/: main.py
2023/day02/game/: game.py
2023/day03/: main.py
2023/day03/tests/: tests.py
2023/day04/: main.py
2023/day04/tests/: num_matches_test.py  num_scorecards_test.py  score_test.py  series_test.py
2023/day05/: main.py
2023/day06/: main.py
2023/day07/: main.py
2023/day08/: main.py
2023/day09/: main.py
2023/day1/: main.py
2023/day10/: main.py
2023/day11/: main.py
2023/day12/: main.py
2023/day2/: main.py
2023/day2/game/: game.py
2023/day3/tests/: tests.py
2023/day4/: main.py
2023/day4/tests/: num_matches_test.py  num_scorecards_test.py  score_test.py  series_test.py
2023/day5/: main.py
2023/day7/: main.py
2023/day8/: main.py
2023/day9/: main.py
