[project]
name = "advent-of-code-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=25.1.0",
    "colorama==0.4.6",
    "iniconfig==2.0.0",
    "numpy>=2.2.6",
    "packaging==24.0",
    "pluggy==1.4.0",
    "pytest==8.1.1",
    "tool>=0.8.0",
]
